[package]
name = "madaollama-server"
version = "0.1.0"
edition = "2024"

[dependencies]
llama-cpp-2 ={ version = "^0.1", features = ["cuda"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
